SCR #566764 - fix: scrollbar dashboard

--- a/src/modules/games/components/game-dashboard/styles/themes/_default.scss
+++ b/src/modules/games/components/game-dashboard/styles/themes/_default.scss
@@ -196,6 +196,7 @@
             padding: ef.get-value($themeDefault, 'contentPadding');
 
             &-item {
+                position: relative;
                 display: flex;
                 flex-direction: column;
                 height: 100%;
@@ -500,8 +501,6 @@
     .wlc-dashboard-bonuses-wrapper {
 
         ::ng-deep {
-            height: 100%;
-            min-height: 1px;
 
             .wlc-scrollbar__container {
                 width: auto;
