--- a/src/modules/tournaments/components/tournament-list/styles/themes/_default.scss
+++ b/src/modules/tournaments/components/tournament-list/styles/themes/_default.scss
@@ -19,7 +19,6 @@
     }
 
     &.wlc-tournament-list--type-dashboard {
-        position: relative;
         display: flex;
         flex-direction: column;
         height: ef.get-value($themeDefault, 'dashboardContainerHeight');
